# Optimizing-GPU-Histogram-Computation

./: README.md  runner_script.sh
include/: studentlib.h
src/: CMakeLists.txt  main.cu
tester/: tester.cpp
